# remote-desk

./: CLAUDE.md  CLI_GUIDE.md  Cargo.toml  DEVELOPMENT_LOG.md  INPUT_TEST_RESULTS.md  MILESTONE_1.4_SUMMARY.md  MILESTONE_1.5_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING_RESULTS.md  TESTING_STATUS.md  test_desktop_layer.sh
.cargo/: config.toml
.claude/skills/clean-code-guide/: SKILL.md
docs/: ARCHITECTURE.md  BUILD_DEPENDENCIES.md  CONTRIBUTING.md  ID_AND_AUTH.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM_OVERVIEW.md
examples/: capture_demo.rs  input_demo.rs  loopback_demo.rs  network_demo.rs  session_demo.rs
src/: error.rs  lib.rs  logging.rs  main.rs
src/clipboard/: mod.rs  sync.rs
src/config/: mod.rs
src/desktop/: capture.rs  decoder.rs  encoder.rs  mod.rs  types.rs
src/input/: mod.rs  simulator.rs  types.rs
src/network/: cert.rs  connection.rs  discovery.rs  listener.rs  manager.rs  mod.rs  protocol.rs  quic.rs  stream.rs
src/security/: id.rs  mod.rs  password.rs
src/session/: client.rs  host.rs  manager.rs  mod.rs  state.rs  transport.rs  types.rs
src/ui/: app.rs  mod.rs  overlay.rs  tray.rs  viewer.rs
src/ui/dialogs/: connection_request.rs  mod.rs  password.rs  peer_id.rs  settings.rs
tests/: loopback_session.rs  quic_connection.rs
