[package]
name = "remote-desk"
version = "0.1.0"
edition = "2021"
authors = ["RemoteDesk Contributors"]
description = "A lightweight peer-to-peer remote desktop application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/remote-desk"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking
quinn = "0.10"              # QUIC implementation
mdns-sd = "0.10"            # mDNS for local discovery

# Screen capture and input
scrap = "0.5"             # Cross-platform screen capture
rdev = "0.5"              # Input simulation (keyboard and mouse)

# Clipboard (will be added later)
# arboard = "3.2"           # Cross-platform clipboard

# Encryption
rustls = "0.21"
ring = "0.17"

# Compression
zstd = "0.13"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password hashing
argon2 = "0.5"

# Utilities
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
hostname = "0.4"
sha2 = "0.10"
bytes = "1.5"                # Efficient byte buffer manipulation
image = "0.24"               # Image processing and encoding

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
toml = "0.8"
directories = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
